--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <doctype HTML>
-<html>
-<head><title>text</title></head>
-<body>Hello World</body></html>
+  <html>
+    <head>
+      <title>text</title>
+    </head>
+    <body>
+      Hello World
+    </body>
+  </html>
+</doctype>
